--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ nav li {
 
 <nav>
   <ul>
-    <BR><a href="D:\6 semestre\proyecto\BIOGRAFIA.html">BIOGRAFIA</a>
+    <BR><a href="https://chino12973.github.io/BIOGRAFIA.HTML">BIOGRAFIA</a>
     <BR><a href="D:\6 semestre\proyecto\GALERIA.html">GALERIA</a>
     <BR><a href="D:\6 semestre\proyecto\LOGROS.html">LOGROS</a>
     <BR><a href="D:\6 semestre\proyecto\DISCOGRAFIA.html">DISCOGRAFIA</a>
