--- a/EXITOS.HTML
+++ b/EXITOS.HTML
@@ -20,7 +20,7 @@
 
 <LI><A HREF="#">TRISTE RECUERDO </A></LI>
 
-<LI><A HREF="#">UN PUÑO DE TIERRA </A></LI>
+<LI><A HREF="#">UN PUÃ‘O DE TIERRA </A></LI>
 
 <LI><A HREF="#">LAMBERTO QUINTERO </A></LI>
 
@@ -50,4 +50,4 @@
 </UL>
 </BODY>
 </HTML>
-<TD><IMG SRC="D:\6 semestre\proyecto\Antonio_Aguilar_in_The_Undefeated.jpg"WIDTH"200" HEIGHT="200"></IMG></TD>
+<TD><IMG SRC="https://raw.githubusercontent.com/Chino12973/Chino12973.github.io/main/images%20(3).jpg"WIDTH"200" HEIGHT="200"></IMG></TD>
