--- a/NOTICIAS.HTML
+++ b/NOTICIAS.HTML
@@ -14,17 +14,17 @@
   <h1>noticias<h1>
 
 <Font Face= "Algerian" Size= "10" Color= "blue">
-¿Quién era Lamberto Quintero? Antonio Aguilar le compuso un corrido al famoso narcotraficante
+Â¿QuiÃ©n era Lamberto Quintero? Antonio Aguilar le compuso un corrido al famoso narcotraficante
 
-<TD><IMG SRC="https://periodicocorreo.com.mx/__export/sites/correo/img/2024/04/01/fenaza190-651397048.jpg"WIDTH"200" HEIGHT="200">
-<TD><IMG SRC="https://periodicocorreo.com.mx/__export/sites/correo/img/2024/04/01/fenaza190-651397048.jpg"WIDTH"200" HEIGHT="200">
+<TD><IMG SRC="https://raw.githubusercontent.com/Chino12973/Chino12973.github.io/main/fenaza190-651397048.jpg"WIDTH"200" HEIGHT="200">
+<TD><IMG SRC="https://raw.githubusercontent.com/Chino12973/Chino12973.github.io/main/fenaza190-651397048.jpg"WIDTH"200" HEIGHT="200">
 
 
 <Font Face= "Algerian" Size= "7" Color= "black">
-<p>Cada 28 de enero, hay quienes escuchan un corrido llamado ‘Lamberto Quintero’ de Antonio Aguilar, que narra lo que le sucedió a uno de los narcotraficantes más sonados de la década de los 70.</P>
+<p>Cada 28 de enero, hay quienes escuchan un corrido llamado â€˜Lamberto Quinteroâ€™ de Antonio Aguilar, que narra lo que le sucediÃ³ a uno de los narcotraficantes mÃ¡s sonados de la dÃ©cada de los 70.</P>
 
-<p>“Un día 28 de enero, como me hiere esa fecha”, es el inicio de uno de los corridos de Antonio Aguilar que recuerda lo que le sucedió a Lamberto Quintero, un narcotraficante que murió en 1976 y cuya historia ha llegado hasta la pantalla grande.
+<p>â€œUn dÃ­a 28 de enero, como me hiere esa fechaâ€, es el inicio de uno de los corridos de Antonio Aguilar que recuerda lo que le sucediÃ³ a Lamberto Quintero, un narcotraficante que muriÃ³ en 1976 y cuya historia ha llegado hasta la pantalla grande.
 
-Antonio Aguilar, cuyo nombre completo era Pascual Antonio Aguilar Barraza, fue un actor mexicano que destacó en la década de los 50 y 60 por su participación en diversos filmes como Los Indestructibles (1969) y La Muerte de Pancho Villa (1974).</P>
+Antonio Aguilar, cuyo nombre completo era Pascual Antonio Aguilar Barraza, fue un actor mexicano que destacÃ³ en la dÃ©cada de los 50 y 60 por su participaciÃ³n en diversos filmes como Los Indestructibles (1969) y La Muerte de Pancho Villa (1974).</P>
 </body>
 </html>
