--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@ nav li {
 <nav>
   <ul>
     <BR><a href="https://chino12973.github.io/BIOGRAFIA.HTML">BIOGRAFIA</a>
-    <BR><a href="D:\6 semestre\proyecto\GALERIA.html">GALERIA</a>
-    <BR><a href="D:\6 semestre\proyecto\LOGROS.html">LOGROS</a>
-    <BR><a href="D:\6 semestre\proyecto\DISCOGRAFIA.html">DISCOGRAFIA</a>
-    <BR><a href="D:\6 semestre\proyecto\PELICULAS.html">PELICULAS</a>
-    <BR><a href="D:\6 semestre\proyecto\EXITOS.html">EXITOS</a>
-    <BR><a href="D:\6 semestre\proyecto\RANCHO EL SOYATE.html">RANCHO EL SOYATE</a>
-    <BR><a href="D:\6 semestre\proyecto\NOTICIAS.html">NOTICIAS</a>
-    <BR><a href="D:\6 semestre\proyecto\FAMILIARES.html">FAMILIARES</a>
+    <BR><a href="https://chino12973.github.io/GALERIA.HTML">GALERIA</a>
+    <BR><a href="https://chino12973.github.io/LOGROS.HTML">LOGROS</a>
+    <BR><a href="https://chino12973.github.io/DISCOGRAFIA.HTML">DISCOGRAFIA</a>
+    <BR><a href="https://chino12973.github.io/PELICULAS.HTML">PELICULAS</a>
+    <BR><a href="https://chino12973.github.io/EXITOS.HTML">EXITOS</a>
+    <BR><a href="https://chino12973.github.io//RANCHO%20EL%20SOYATE.HTML">RANCHO EL SOYATE</a>
+    <BR><a href="https://chino12973.github.io/NOTICIAS.HTML">NOTICIAS</a>
+    <BR><a href="https://chino12973.github.io/FAMILIARES.HTML">FAMILIARES</a>
 
 </H1><CENTER
   </ul>
