--- a/RANCHO EL SOYATE.HTML
+++ b/RANCHO EL SOYATE.HTML
@@ -13,14 +13,14 @@
 <body>
   <h1>Rancho el soyate<h1>
 <Font Face= "Algerian" Size= "10" Color= "black">
-  <p>El impresionante rancho "El soyate" de la dinastia aguilar esta en elcorazon de zacatecas, entre las tierras del poblado de tayahua, en el municipio de villanueva la propiedad pertenece al patriarca  de la familia aguilar , don antonio aguilar, "El charo de mexico", y decidio bautizarlo como el soyate Pepe Aguilar y Antonio Aguilar Jr. son los legÌtimos herederos de este refugio de la DinastÌa Aguilar, que contempla miles de hect·reas, como afirmÛ Marcela Rubiales, hija de Flor Silvestre.
-A travÈs de redes sociales, ¡ngela, Leonardo y Majo, hijos de Pepe Aguilar y Antonio Aguilar Jr., han compartido pequeÒos detalles que muestran 'El Soyate', donde puede apreciarse que la arquitectura del rancho tiene figuras tradicionales de MÈxico, largos pasillos, fuentes, un establo, una enorme cocina, varios patios y caballerizas.
+  <p>El impresionante rancho "El soyate" de la dinastia aguilar esta en elcorazon de zacatecas, entre las tierras del poblado de tayahua, en el municipio de villanueva la propiedad pertenece al patriarca  de la familia aguilar , don antonio aguilar, "El charo de mexico", y decidio bautizarlo como el soyate Pepe Aguilar y Antonio Aguilar Jr. son los leg√≠timos herederos de este refugio de la Dinast√≠a Aguilar, que contempla miles de hect√°reas, como afirm√≥ Marcela Rubiales, hija de Flor Silvestre.
+A trav√©s de redes sociales, √Ångela, Leonardo y Majo, hijos de Pepe Aguilar y Antonio Aguilar Jr., han compartido peque√±os detalles que muestran 'El Soyate', donde puede apreciarse que la arquitectura del rancho tiene figuras tradicionales de M√©xico, largos pasillos, fuentes, un establo, una enorme cocina, varios patios y caballerizas.
 .</P>
 
-<TD><IMG SRC="https://i.pinimg.com/originals/58/44/e7/5844e7bac592fb988634930e0aae0949.jpg"WIDTH"200" HEIGHT="200">
+<TD><IMG SRC="https://raw.githubusercontent.com/Chino12973/Chino12973.github.io/main/f768x1-1162149_1162276_0.jpg"WIDTH"200" HEIGHT="200">
 
 
-<TD><IMG SRC="https://www.mdzol.com/u/fotografias/m/2022/1/7/f768x1-1162149_1162276_0.jpg"WIDTH"200" HEIGHT="200">
+<TD><IMG SRC="https://raw.githubusercontent.com/Chino12973/Chino12973.github.io/main/5844e7bac592fb988634930e0aae0949.jpg"WIDTH"200" HEIGHT="200">
 
                                                          
 
