--- a/BIOGRAFIA.HTML
+++ b/BIOGRAFIA.HTML
@@ -77,3 +77,6 @@ dirigirse a El Soyate, donde fue sepultado esa tarde (jueves 21 de junio).<BR>
 
 
 <TD><IMG SRC="https://raw.githubusercontent.com/Chino12973/Chino12973.github.io/main/descargar%20(1).jpg"WIDTH"200" HEIGHT="200">
+
+
+<BR><a href="https://chino12973.github.io/index.html">INICIO</a>
