--- a/DISCOGRAFIA.HTML
+++ b/DISCOGRAFIA.HTML
@@ -23,7 +23,7 @@
    <ul>
 
 <li>Tristes recuerdos</li>
-<li>Un puño de tierra</li>
+<li>Un puÃ±o de tierra</li>
 <li>Gabino barrera</li>
 <li>Lamberto  quintero</li>
 <li>Albur de amor</li>
@@ -33,15 +33,16 @@
 <li>El moro de cumpas</li>
 <li>Busca otro amor</li>
 <li>Anillo grabado</li>
-<li>Hace un año</li>
+<li>Hace un aÃ±o</li>
 <li>La cruda</li>
-<li>De mañana en ocho dias</li>
+<li>De maÃ±ana en ocho dias</li>
 <li>Por esa calle vive</li>
 <li>Cuatro milpas</li>
     
 
   </ul>
 
+<BR><a href="https://chino12973.github.io/index.html">INICIO</a>
 
 </body>
 </html>
