--- a/EXITOS.HTML
+++ b/EXITOS.HTML
@@ -51,3 +51,5 @@
 </BODY>
 </HTML>
 <TD><IMG SRC="https://raw.githubusercontent.com/Chino12973/Chino12973.github.io/main/images%20(3).jpg"WIDTH"200" HEIGHT="200"></IMG></TD>
+
+<BR><a href="https://chino12973.github.io/index.html">INICIO</a>
