--- a/LOGROS.HTML
+++ b/LOGROS.HTML
@@ -26,3 +26,5 @@ Este es el grado de estudios que logró Antonio Aguilar
 <TD><IMG SRC="https://raw.githubusercontent.com/Chino12973/Chino12973.github.io/main/images%20(3).jpg"WIDTH"200" HEIGHT="200">
 </body>
 </html>
+
+<BR><a href="https://chino12973.github.io/index.html">INICIO</a>
