--- a/NOTICIAS.HTML
+++ b/NOTICIAS.HTML
@@ -28,3 +28,5 @@
 Antonio Aguilar, cuyo nombre completo era Pascual Antonio Aguilar Barraza, fue un actor mexicano que destacó en la década de los 50 y 60 por su participación en diversos filmes como Los Indestructibles (1969) y La Muerte de Pancho Villa (1974).</P>
 </body>
 </html>
+
+<BR><a href="https://chino12973.github.io/index.html">INICIO</a>
