--- a/PELICULAS.HTML
+++ b/PELICULAS.HTML
@@ -19,11 +19,13 @@
 <li>Los Cuatro Juanes</li>
 <li>Lamberto Quintero</li>
 <li>Los dos rivales</li>
-<li>AquÌ Est· Tu Enamorado (1963)</li>
-<li>Vuelve el NorteÒo </li>
+<li>Aqu√≠ Est√° Tu Enamorado (1963)</li>
+<li>Vuelve el Norte√±o </li>
 <li>Caballo prieto azabache -</li>
 <li>albur de amor</li>
 <li>Yo, el mujeriego </li>
 <li>El rey (1976)</li>
 </body>
 </html>
+
+<BR><a href="https://chino12973.github.io/index.html">INICIO</a>
