Update RANCHO EL SOYATE.HTML

--- a/RANCHO EL SOYATE.HTML
+++ b/RANCHO EL SOYATE.HTML
@@ -24,6 +24,7 @@ A través de redes sociales, Ángela, Leonardo y Majo, hijos de Pepe Aguilar y A
 
                                                          
 
+<BR><a href="https://chino12973.github.io/index.html">INICIO</a>
 
 
 </body>
