--- a/BIOGRAFIA.HTML
+++ b/BIOGRAFIA.HTML
@@ -80,3 +80,5 @@ dirigirse a El Soyate, donde fue sepultado esa tarde (jueves 21 de junio).<BR>
 
 
 <BR><a href="https://chino12973.github.io/index.html">INICIO</a>
+            </font>
+
